--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +10,47 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+Button {
+  border-radius: 10px;
+  padding: 10px;
+  background-color: rgb(5, 143, 255);
+  border-color: rgb(5, 143, 255);
+  color: white;
+  font: Arial, sans-serif;
+}
+
+.card {
+  padding: 20px;
+  margin: 25px;
+  border-radius: 10px;
+  box-shadow: 2px;
+  filter: drop-shadow(4px 8px 8px rgb(150, 157, 163));
+  background: rgb(255, 255, 255);
+  width: 300px;
+  color:  rgb(0, 26, 48);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.circle {
+  border-radius: 50%;
+  background-color: rgb(206, 233, 255);
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  line-height: 100px;
+  font: Arial, sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  background-color: rgb(206, 233, 255);
+  color: rgb(131, 147, 160);
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
